--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -8,11 +8,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#000000"
     tools:context="com.example.aarya.learntocrack.Launcher">
-
+<ImageView
+    android:id="@+id/app_icon"
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:layout_centerInParent="true"
+    android:src="@drawable/note_paper"/>
     <TextView
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
+        android:layout_below="@+id/app_icon"
         android:layout_height="wrap_content"
-        android:text="hi..."/>
+        android:layout_centerInParent="true"
+        android:textColor="#ffffff"
+        android:text="@string/app_name"/>
 
 </RelativeLayout>
