--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#000000"
-    tools:context="com.example.aarya.learntocrack.Launcher">
+    tools:context="com.example.aarya.learntocrack.activity.Launcher">
 <ImageView
     android:id="@+id/app_icon"
     android:layout_width="300dp"
